[gd_scene load_steps=11 format=3 uid="uid://4van3nfxn4or"]

[ext_resource type="Script" path="res://scenes/ui/save_panel_popup.gd" id="1_366vg"]
[ext_resource type="Script" path="res://scenes/ui/save_panel.gd" id="1_isqnd"]
[ext_resource type="Shader" path="res://shaders/dot_matrix.gdshader" id="2_o7rw6"]
[ext_resource type="Texture2D" uid="uid://csuar07pb12et" path="res://assets/tex_lit.png" id="3_yjmin"]
[ext_resource type="Texture2D" uid="uid://dg7xfxdymlqdl" path="res://assets/tex_unlit.png" id="4_746yc"]
[ext_resource type="Texture2D" uid="uid://mt7pueeb0ox4" path="res://icon.svg" id="5_nucv3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fqb3"]
bg_color = Color(0.231373, 0.376471, 0.462745, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.231373, 0.376471, 0.462745, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Gradient" id="Gradient_sh5a7"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m23fr"]
gradient = SubResource("Gradient_sh5a7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dlav4"]
shader = ExtResource("2_o7rw6")
shader_parameter/grid_size = Vector2(16, 9)
shader_parameter/lit_texture = ExtResource("3_yjmin")
shader_parameter/unlit_texture = ExtResource("4_746yc")
shader_parameter/mask_texture = SubResource("GradientTexture2D_m23fr")

[node name="SavePanelPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_366vg")

[node name="SavePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fqb3")
script = ExtResource("1_isqnd")

[node name="SelectedObjectInfo" type="VBoxContainer" parent="SavePanel"]
layout_mode = 2

[node name="SaveObjectPreview" type="TextureRect" parent="SavePanel/SelectedObjectInfo"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dlav4")
custom_minimum_size = Vector2(768, 432)
layout_mode = 2
texture = ExtResource("5_nucv3")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="SavePanel/SelectedObjectInfo"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SavePanel/SelectedObjectInfo/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RleCode" type="Label" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(760, 24)
layout_mode = 2
text = "x = 3, y =3, rule = B3/S23
bo$2bo$3o!"
horizontal_alignment = 1
autowrap_mode = 1

[node name="NameHBox" type="HBoxContainer" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/NameHBox"]
layout_mode = 2
text = "Name          "

[node name="NameEdit" type="LineEdit" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/NameHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionHBox" type="HBoxContainer" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/DescriptionHBox"]
layout_mode = 2
text = "Description"

[node name="DescriptionEdit" type="LineEdit" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/DescriptionHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CancelSaveButton" type="Button" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"LabelButton"
text = "Cancel"

[node name="SaveFileButton" type="Button" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"LabelButton"
text = "Save to File"

[node name="SaveDBButton" type="Button" parent="SavePanel/SelectedObjectInfo/PanelContainer/MarginContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"LabelButton"
text = "Save to DB"
